update var name

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
 	
-	<div id="measureOutcome" style="width:800px;height:400px;"></div>
+	<div id="measureOutcome" style="width:800px;height:400px;"></div>	
+	<div id="pathSwitch" style="width:800px;height:400px;"></div>
+
+
 	<script src="js/measureOutcome.js"></script>
+	<script src="js/pathSwitch.js"></script>
 </body>
 </html>
