--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,6 @@
 	<meta http-equiv="cache-control" content="max-age=0" />
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="expires" content="0" />
-	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 	<meta http-equiv="pragma" content="no-cache" />
 	<!-- 引入 ECharts 文件 -->
 	<script src="js/app.js"></script>
@@ -15,8 +14,8 @@
 </head>
 <body>
 	
-	<div id="measureOutcome" style="width:800px;height:400px;"></div>	
-	<div id="pathSwitch" style="width:800px;height:400px;"></div>
+	<div id="measureOutcome" style="width:50%;height:400px;float:left;"></div>	
+	<div id="pathSwitch" style="width:50%;height:400px;float:left;"></div>
 
 
 	<script src="js/measureOutcome.js"></script>
