--- a/html/index.html
+++ b/html/index.html
@@ -16,9 +16,11 @@
 	
 	<div id="measureOutcome" style="width:50%;height:400px;float:left;"></div>	
 	<div id="pathSwitch" style="width:50%;height:400px;float:left;"></div>
+	<div id="onLuaError" style="width:50%;height:400px;float:left;"></div>
 
-
+	
 	<script src="js/measureOutcome.js"></script>
 	<script src="js/pathSwitch.js"></script>
+	<script src="js/onLuaError.js"></script>
 </body>
 </html>
